--- a/client/index.html
+++ b/client/index.html
@@ -20,10 +20,10 @@
 
 <body>
     <h1>Check the console window!</h1>
-    <p>add a require("logger")() on top of any files you wanna debug</p>
+    <p>add a require on top of any files you wanna debug</p>
     <pre><code class="language-javascript">
         // write this on top of your file
-        require("logger")();
+        require("node-browser-logger").logger();
         ...
         </code></pre>
 
